# RAG-Workshop-AI-Summer

./: README.md  main.py  pyproject.toml  requirements.txt
setup/: unix_setup.sh  windows_setup.ps1
